prismaインストール

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "serve-json": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
+    "@prisma/client": "^4.11.0",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "json-server": "^0.17.2",
@@ -18,5 +19,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.1.0"
+  },
+  "devDependencies": {
+    "prisma": "^4.11.0"
   }
 }
